--- a/src/components/DenominationItem/index.css
+++ b/src/components/DenominationItem/index.css
@@ -2,9 +2,21 @@
 
 .button {
   background-color: #382f5a;
-  color: white;
-  border: solid #d4d2db 1px;
-  height: 50px;
-  width: 120px;
-  border-radius: 10px;
+  color: #d4d2db;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  width: 100px;
+  border-radius: 4px;
+  border: 1px solid #c4c4c4;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  cursor: pointer;
+  outline: none;
+}
+.listItem {
+  display: flex;
+
+  justify-content: space-between;
+  width: 50vw;
 }
